fix(security): permit all OPTIONS preflight requests and configure global CorsFilter for multi-origin access